@@ -1,3 +1,8 @@
+2009-01-22  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/38931
+	* gcc.target/i386/pr38931.c: New test.
+
 2009-01-22  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/38930
